example/cadre/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cadre
  labels:
    name: cadre
