example/cadre/04-deployment-cadre-graphql.yaml
apiVersion: v1
kind: Service
metadata:
  # This service is meant to be used by clients of the database. It exposes a ClusterIP that will
  # automatically load balance connections to the different database pods.
  name: graphql
  namespace: cadre
  labels:
    app: graphql
    project: cadre
spec:
  ports:
  - port: 9301
    targetPort: 9301
    name: http
  selector:
    app: graphql
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: graphql
  namespace: cadre
  labels:
    app: graphql
    project: cadre
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
    spec:
      containers:
      - name: graphql
        image: registry.gitlab.com/target-digital-transformation/cadre-be/master
        imagePullPolicy: Always
        command: 
        - "cadre-serve"
        - "kadir"
        - "graphql"
        - "--redis=redis.db:6379"
        - "--dsn=postgres://$(DB_USER):$(DB_PASSWORD)@$(DATABASE_SERVER):5432/$(DATABASE)?sslmode=disable"
        - "--oidc=http://dex.sso/dex"
        - "--ac-grpc=ladon.access-control:80"
        - "--disable-ac"
        - "--verbose"
        ports:
        - containerPort: 9301
          name: http
      imagePullSecrets:
      - name: registry.gitlab.com
