example/cadre/05-deployment-cadre-rest.yaml
apiVersion: v1
kind: Service
metadata:
  # This service is meant to be used by clients of the database. It exposes a ClusterIP that will
  # automatically load balance connections to the different database pods.
  name: rest
  namespace: cadre
  labels:
    app: rest
    project: cadre
spec:
  ports:
  - port: 9201
    targetPort: 9201
    name: http
  selector:
    app: rest
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: rest
  namespace: cadre
  labels:
    app: rest
    project: cadre
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest
        image: registry.gitlab.com/target-digital-transformation/cadre-be/master
        imagePullPolicy: Always
        command: 
        - "cadre-serve"
        - "kadir"
        - "rest"
        - "--address=:9201"
        - "--redis=redis.db:6379"
        - "--dsn=postgres://$(DB_USER):$(DB_PASSWORD)@$(DATABASE_SERVER):5432/$(DATABASE)?sslmode=disable"
        - "--oidc=http://dex.sso/dex"
        - "--sms-grpc=sms-grpc:9102"
        - "--minio-url=minio.storage:9000"
        - "--minio-pub=minio_access"
        - "--minio-key=Tes9ting"
        - "--ac-grpc=ladon.access-control:80"
        - "--disable-ac"
        - "--verbose"
        ports:
        - containerPort: 9201
          name: http
      imagePullSecrets:
      - name: registry.gitlab.com
