example/cadre/06-ingress-cadre-graphql.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: graphql
  namespace: cadre
spec:
  rules:
  - host: graphql.cadre
    http:
      paths:
      - backend:
          serviceName: graphql
          servicePort: 9301
        path: /
